[package]
name = "red-crab-nnue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3.1"
vampirc-uci = "0.11.1"
nnue = { git = "https://github.com/analog-hors/nnue-rs.git"}
binread = "2.2.0"
